Fixed text alignment, Added package.json

--- a/saas/components/buttons.scss
+++ b/saas/components/buttons.scss
@@ -1,7 +1,7 @@
 .plan__buttons__section {
     display: flex;
     position: relative;
-    margin-left: 25%;
+    margin-left: 30%;
     &__wrapper {
       display: flex;
       flex-direction: row;
