--- a/saas/pages/cards.scss
+++ b/saas/pages/cards.scss
@@ -34,9 +34,9 @@
           background-color: $first_block_color;
         }
       }
-      .plan__option__section {
-        margin-top: 50px;
-      }
+    //   .plan__option__section {
+    //     margin-top: 50px;
+    //   }
     }
     &_second {
       @extend .plans__plan;
@@ -82,7 +82,7 @@
     &__line {
       width: 70%;
       height: 5px;
-      margin: 20px auto;
+      margin: 30px auto 20px auto;
       border-bottom-right-radius: 25px;
       border-bottom-left-radius: 25px;
       border-top-left-radius: 25px;
@@ -106,7 +106,7 @@
     width: 204px;
     height: 50px;
 
-    margin: 10 auto;
+    margin: 0 auto;
 
     &-link {
       color: $white-text;
